@@ -1,3 +1,8 @@
+[B]Version 0.4.1[/B]
+
+- Updated: settings.xml (sorry, missed that file)
+
+
 [B]Version 0.4.0[/B]
 
 - Added: favorite list and management
